--- a/app/src/main/res/layout/fragment_assistant_operation_moov.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_moov.xml
@@ -169,7 +169,7 @@
                             android:layout_marginHorizontal="20dp"
                             android:hint="Montant"
                             android:inputType="number"
-                            android:paddingStart="20dp"
+                            android:paddingStart="30dp"
                             android:text="0"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -218,6 +218,7 @@
                             android:hint="Téléphone"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -265,6 +266,7 @@
                             android:hint="Montant"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
