--- a/app/src/main/res/layout/fragment_assistant_operation_ria.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_ria.xml
@@ -134,7 +134,7 @@
                             android:layout_marginHorizontal="20dp"
                             android:hint="Montant"
                             android:inputType="number"
-                            android:paddingStart="20dp"
+                            android:paddingStart="30dp"
                             android:text="0"
                             android:entries="@array/type_transaction_international"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -184,6 +184,7 @@
                             android:hint="Téléphone"
                             android:inputType="number"
                             android:paddingStart="30dp"
+                            style="@style/inputFont"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
