--- a/app/src/main/res/layout/fragment_assistant_point_national.xml
+++ b/app/src/main/res/layout/fragment_assistant_point_national.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/pointbackButton"
+                    android:id="@+id/pointbackButtonNational"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginStart="10dp"
@@ -127,7 +127,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_orange_edt"
+                            android:id="@+id/point_nat_orange_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -172,7 +172,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_mtn_edt"
+                            android:id="@+id/point_nat_mtn_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -217,7 +217,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_moov_edt"
+                            android:id="@+id/point_nat_moov_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -262,7 +262,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_wave_edt"
+                            android:id="@+id/point_nat_wave_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -307,7 +307,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_tresor_edt"
+                            android:id="@+id/point_nat_tresor_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -333,8 +333,8 @@
                 android:textColor="#A1A1A1"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/cardviewInternational"
-                app:layout_constraintTop_toBottomOf="@+id/cardviewInternational" />
+                app:layout_constraintStart_toStartOf="@+id/cardViewNational"
+                app:layout_constraintTop_toBottomOf="@+id/cardViewNational" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView9"
@@ -390,7 +390,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_espece_edt"
+                            android:id="@+id/point_nat_espece_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -439,7 +439,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <EditText
-                            android:id="@+id/point_divers_edt"
+                            android:id="@+id/point_nat_divers_edt"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
                             android:layout_marginHorizontal="20dp"
@@ -456,141 +456,9 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/txtTitleInter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Transferts Internationaux"
-                android:layout_marginTop="20dp"
-                android:textColor="#A1A1A1"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/cardviewInternational"
-                app:layout_constraintTop_toBottomOf="@+id/cardViewNational" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardviewInternational"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtTitleInter">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:layout_marginTop="25dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Solde retrait International"/>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="43dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/background_circular"
-                        android:padding="2dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/cardView11442"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            app:cardCornerRadius="50dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:background="@color/background_color"
-                                android:padding="5dp"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/baseline_money_24"
-                                app:tint="@color/black" />
-                        </androidx.cardview.widget.CardView>
-
-                        <EditText
-                            android:id="@+id/point_retrait_international_edt"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_marginHorizontal="20dp"
-                            android:background="@color/white"
-                            android:hint="Montant"
-                            android:inputType="number"
-                            android:paddingStart="30dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <TextView
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Solde Envoi International"/>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="43dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/background_circular"
-                        android:padding="2dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:id="@+id/cardView11441"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
-                            app:cardCornerRadius="50dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
-                                android:background="@color/background_color"
-                                android:padding="5dp"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/baseline_money_24"
-                                app:tint="@color/black" />
-                        </androidx.cardview.widget.CardView>
-
-                        <EditText
-                            android:id="@+id/point_envoi_international_edt"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_marginHorizontal="20dp"
-                            android:background="@color/white"
-                            android:hint="Montant"
-                            android:inputType="number"
-                            android:paddingStart="30dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/info_text_point"
+                android:id="@+id/info_text_point_national"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -599,23 +467,23 @@
                 android:text="@string/info_text_point"
                 android:textColor="@color/color_item_amount"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_register_point"
-                app:layout_constraintEnd_toEndOf="@+id/btn_register_point"
-                app:layout_constraintStart_toStartOf="@+id/btn_register_point"
-                app:layout_constraintTop_toTopOf="@+id/btn_register_point" />
+                app:layout_constraintBottom_toBottomOf="@+id/btn_register_point_national"
+                app:layout_constraintEnd_toEndOf="@+id/btn_register_point_national"
+                app:layout_constraintStart_toStartOf="@+id/btn_register_point_national"
+                app:layout_constraintTop_toTopOf="@+id/btn_register_point_national" />
 
             <TextView
-                android:id="@+id/info_avant_enregistrement"
+                android:id="@+id/info_avant_enregistrement_national"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="30dp"
                 android:text="@string/info_avant_enregistrement"
                 app:layout_constraintEnd_toEndOf="@+id/cardView9"
                 app:layout_constraintStart_toStartOf="@+id/cardView9"
-                app:layout_constraintTop_toBottomOf="@+id/progressBarPoint" />
+                app:layout_constraintTop_toBottomOf="@+id/progressBarPointNational" />
 
             <ProgressBar
-                android:id="@+id/progressBarPoint"
+                android:id="@+id/progressBarPointNational"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="10dp"
@@ -624,7 +492,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/cardView9" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_register_point"
+                android:id="@+id/btn_register_point_national"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -635,7 +503,7 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/info_avant_enregistrement"
+                app:layout_constraintTop_toBottomOf="@+id/info_avant_enregistrement_national"
                 tools:layout_editor_absoluteX="15dp" />
 
             <androidx.constraintlayout.widget.Guideline
