--- a/app/src/main/res/layout/item_assitant_operation.xml
+++ b/app/src/main/res/layout/item_assitant_operation.xml
@@ -92,6 +92,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_item_amount"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
