--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,11 +4,19 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:fontFamily">@font/segoe</item>
+        <item name="android:spinnerItemStyle">@style/inputFont</item>
+        <item name="android:spinnerDropDownItemStyle">@style/inputFont</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="TitleFont">
         <item name="android:fontFamily">@font/tahoma</item>
         <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="inputFont" parent="TitleFont">
+        <item name="android:color">@color/black</item>
+        <item name="android:textSize">19sp</item>
     </style>
 
     <style name="ThinFont">
